--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,12 +9,40 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_sell"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:title="@string/menu_Sell" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_wallet"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:title="@string/menu_Wallet" />
+        <item
+            android:id="@+id/nav_smart"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_smart" />
+        <item
+            android:id="@+id/nav_micro"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_micro" />
+        <item
+            android:id="@+id/nav_advance"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_advance" />
+        <item
+            android:id="@+id/nav_insurance"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_insurance" />
+        <item
+            android:id="@+id/nav_analytic"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_analytic" />
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_settings" />
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_logout" />
     </group>
 </menu>
