--- a/app/src/main/res/layout/activity_customer_register.xml
+++ b/app/src/main/res/layout/activity_customer_register.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".customer_register">
+    tools:context=".customer_register"
+    android:background="@drawable/logovtwo">
 
     <ImageView
         android:id="@+id/imageView3"
