--- a/app/src/main/res/layout/activity_new_user_type.xml
+++ b/app/src/main/res/layout/activity_new_user_type.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewUserType">
+    tools:context=".NewUserType"
+    android:background="@drawable/backgroundpic">
 
 
     <ImageView
