--- a/app/src/main/res/layout/activity_new_user_type.xml
+++ b/app/src/main/res/layout/activity_new_user_type.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NewUserType"
-    android:background="@drawable/backgroundpic">
+    android:background="@drawable/logovtwo">
 
 
     <ImageView
@@ -27,7 +27,7 @@
 
     <TextView
         android:id="@+id/textOverlay3"
-        android:layout_width="243dp"
+        android:layout_width="261dp"
         android:layout_height="61dp"
         android:layout_centerInParent="true"
         android:background="#80000000"
@@ -59,7 +59,7 @@
 
     <TextView
         android:id="@+id/textOverlay"
-        android:layout_width="243dp"
+        android:layout_width="261dp"
         android:layout_height="61dp"
         android:layout_centerInParent="true"
         android:background="#80000000"
