changed background and fixed some bugs

--- a/app/src/main/res/layout/activity_splashy.xml
+++ b/app/src/main/res/layout/activity_splashy.xml
@@ -4,6 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/otherappbackground"
     tools:context=".splashy">
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="248dp"
+        android:layout_height="201dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/nahlatlogo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
