--- a/app/src/main/res/layout/activity_business_registeration.xml
+++ b/app/src/main/res/layout/activity_business_registeration.xml
@@ -4,9 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".business_registeration"
-    android:background="@drawable/logovtwo">
+    android:background="@drawable/hopefullyfinalbackground"
+    tools:context=".business_registeration">
 
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="248dp"
+        android:layout_height="201dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/fname"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/nahlatlogo" />
 
     <EditText
         android:id="@+id/lname"
@@ -14,12 +24,12 @@
         android:layout_height="68dp"
         android:layout_marginBottom="572dp"
         android:hint="Last Name"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.93"
-        app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/black"
-        android:textStyle="bold"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/pno"
@@ -28,26 +38,26 @@
         android:layout_marginBottom="240dp"
         android:drawableLeft="@drawable/baseline_phone_enabled_24"
         android:hint="Enter Phone Number"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/black"
-        android:textStyle="bold"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:text="Business Registeration"
+        android:text="Business Registration"
+        android:textColor="@color/black"
         android:textSize="35dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/fname"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/black"
-        android:textStyle="bold"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/bname"
@@ -55,12 +65,12 @@
         android:layout_height="65dp"
         android:layout_marginBottom="24dp"
         android:hint="Enter Business Name"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/badress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/black"
-        android:textStyle="bold"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/email"
@@ -69,12 +79,12 @@
         android:layout_marginBottom="16dp"
         android:drawableLeft="@drawable/baseline_person_24"
         android:hint="Enter Email"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/pno"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/black"
-        android:textStyle="bold"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/badress"
@@ -83,21 +93,33 @@
         android:layout_marginBottom="12dp"
         android:drawableLeft="@drawable/baseline_warehouse_24"
         android:hint="Business Address"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.517"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <EditText
+        android:id="@+id/fname"
+        android:layout_width="180dp"
+        android:layout_height="68dp"
+        android:layout_marginBottom="572dp"
+        android:hint="First Name"
         android:textColor="@color/black"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.069"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/pasword"
         android:layout_width="316dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="525dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="600dp"
         android:layout_marginBottom="87dp"
-        android:background="@drawable/custome_edittext_1"
-        android:backgroundTint="@color/white"
         android:hint="Enter Password"
         android:text="Enter Your Password"
         app:layout_constraintBottom_toTopOf="@+id/regbtn"
@@ -110,48 +132,36 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/custome_edittext_1"
-            android:backgroundTint="@color/white"
+            android:background="#00000000"
             android:ems="15"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:textStyle="bold" />
 
     </com.google.android.material.textfield.TextInputLayout>
-
-    <EditText
-        android:id="@+id/fname"
-        android:layout_width="180dp"
-        android:layout_height="68dp"
-        android:layout_marginBottom="572dp"
-        android:hint="First Name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.069"
-        app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/black"
-        android:textStyle="bold"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/cpasword"
         android:layout_width="316dp"
         android:layout_height="58dp"
+        android:layout_marginTop="11dp"
+
         android:layout_marginBottom="80dp"
-        android:background="@drawable/custome_edittext_1"
-        android:backgroundTint="@color/white"
         android:hint="Confirm Password"
         android:text="Enter Your Password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.463"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pasword"
         app:passwordToggleEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/custome_edittext_1"
-            android:backgroundTint="@color/white"
+            android:background="#00000000"
             android:ems="15"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:textStyle="bold" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -160,8 +170,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="13dp"
-        android:background="@drawable/custome_edittext_1"
-        android:backgroundTint="@color/purple_200"
+
+        android:backgroundTint="#FCAE1E"
         android:hint="LOG IN"
         android:text="Register Business"
         android:textColorHint="@color/white"
