--- a/app/src/main/res/layout/activity_customer_register.xml
+++ b/app/src/main/res/layout/activity_customer_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".customer_register"
-    android:background="@drawable/logovtwo">
+    android:background="@drawable/hopefullyfinalbackground">
 
     <ImageView
         android:id="@+id/imageView3"
@@ -78,8 +78,7 @@
         android:layout_width="280dp"
         android:layout_height="68dp"
         android:layout_marginBottom="200dp"
-        android:background="@drawable/custome_edittext_1"
-        android:backgroundTint="@color/white"
+
         android:hint="Enter Password"
         android:text="Enter Your Password"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -90,8 +89,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/custome_edittext_1"
-            android:backgroundTint="@color/white"
+            android:background="#00000000"
+            android:textStyle="bold"
             android:ems="15"
             android:inputType="textPassword" />
 
@@ -102,8 +101,7 @@
         android:layout_width="280dp"
         android:layout_height="68dp"
         android:layout_marginBottom="112dp"
-        android:background="@drawable/custome_edittext_1"
-        android:backgroundTint="@color/white"
+
         android:hint="Confirm Password"
         android:text="Enter Your Password"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -114,12 +112,29 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/custome_edittext_1"
-            android:backgroundTint="@color/white"
+            android:textStyle="bold"
+            android:background="#00000000"
             android:ems="15"
             android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <Button
+        android:id="@+id/regbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="13dp"
+
+        android:backgroundTint="#FCAE1E"
+        android:hint="LOG IN"
+        android:text="Register Business"
+        android:textColorHint="@color/white"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pasword"
+        app:layout_constraintVertical_bias="0.863" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
