--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginPage">
+    tools:context=".LoginPage"
+    android:background="@drawable/hopefullyfinalbackground">
 
 
     <ImageView
@@ -24,15 +25,14 @@
         android:layout_width="280dp"
         android:layout_height="65dp"
         android:layout_marginBottom="4dp"
-        android:background="@drawable/custome_edittext_1"
+
         android:drawableLeft="@drawable/baseline_person_24"
         android:hint="Enter Email"
-        android:backgroundTint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/ptext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/black"
+        android:textColor="#808080"
         android:textStyle="bold"/>
 
     <EditText
@@ -40,15 +40,15 @@
         android:layout_width="280dp"
         android:layout_height="65dp"
         android:layout_marginBottom="356dp"
-        android:background="@drawable/custome_edittext_1"
+
         android:drawableLeft="@drawable/baseline_lock_24"
         android:hint="Enter Password"
-        android:backgroundTint="@color/white"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/black"
+        android:textColor="#808080"
         android:textStyle="bold"/>
 
     <TextView
@@ -70,8 +70,7 @@
         android:layout_width="287dp"
         android:layout_height="58dp"
         android:layout_marginBottom="36dp"
-        android:background="@drawable/custome_edittext_1"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="#FCAE1E"
         android:hint="LOG IN"
         android:textColorHint="@color/white"
         android:textSize="30dp"
