--- a/app/src/main/res/layout/activity_new_user_type.xml
+++ b/app/src/main/res/layout/activity_new_user_type.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NewUserType"
-    >
+    android:background="@drawable/hopefullyfinalbackground">
 
 
     <ImageView
@@ -50,7 +50,7 @@
         android:layout_marginEnd="75dp"
         android:layout_marginBottom="104dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/beekeeper"
+        android:src="@drawable/backgroundhopefully"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
