--- a/app/src/main/res/layout/advanceguide.xml
+++ b/app/src/main/res/layout/advanceguide.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.advanceguide.advanceguide">
+    tools:context=".ui.advanceguide.advanceguide"
+    android:background="@drawable/hopefullyfinalbackground">
 
     <TextView
         android:id="@+id/text_slideshow"
