--- a/app/src/main/res/layout/fragment_cushome.xml
+++ b/app/src/main/res/layout/fragment_cushome.xml
@@ -4,17 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/hopefullyfinalbackground"
     tools:context=".ui.cushome.cusHomeFragment">
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_home"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="1dp" />
+
+
     <TextView
         android:id="@+id/text_home"
         android:layout_width="match_parent"
