--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.gallery.GalleryFragment">
+    tools:context=".ui.gallery.GalleryFragment"
+    android:background="@drawable/hopefullyfinalbackground">
 
     <TextView
         android:id="@+id/text_gallery"
@@ -25,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="111dp"
+        android:backgroundTint="#FCAE1E"
         android:text="Button"
         app:layout_constraintBottom_toTopOf="@+id/text_gallery"
         app:layout_constraintEnd_toEndOf="parent"
