--- a/app/src/main/res/layout/microfinance.xml
+++ b/app/src/main/res/layout/microfinance.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:text="Get Loann"
+        android:text="Get Loan"
         android:textColor="@color/black"
         android:textSize="50dp"
         android:textStyle="bold"
