--- a/app/src/main/res/layout/advanceguide.xml
+++ b/app/src/main/res/layout/advanceguide.xml
@@ -4,20 +4,170 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.advanceguide.advanceguide"
-    android:background="@drawable/hopefullyfinalbackground">
+    android:background="@drawable/hopefullyfinalbackground"
+    tools:context=".ui.advanceguide.advanceguide">
+
 
     <TextView
-        android:id="@+id/text_slideshow"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/textView7"
+        android:layout_width="175dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:text="Guide"
+        android:textColor="@color/black"
+        android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.118"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="183dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="24dp"
+        android:text="To learn about application"
+        android:textColor="@color/purple_700"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.07"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TableLayout
+        android:id="@+id/tableLayout2"
+        android:layout_width="382dp"
+        android:layout_height="227dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TableRow android:background="#FFC107">
+
+            <TextView
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:hint="Free Course"
+                android:textSize="25dp"></TextView>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="300dp"
+                android:layout_height="75dp"
+                android:hint="Title:-Zero to One                      Author: Peter Thiel (2014)"
+                android:textColor="@color/black"
+                android:textSize="25dp"></TextView>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="400dp"
+                android:layout_height="15dp"
+                android:hint="-----------------------------------------------------"
+                android:textColor="@color/black"
+                android:textSize="25dp"></TextView>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+
+                android:layout_width="400dp"
+                android:layout_height="75dp"
+                android:hint="Title:-Rich Dad Poor Dad           Author: Robert T. Kiyosaki (1997)"
+                android:textColor="@color/black"
+                android:textSize="25dp"></TextView>
+
+        </TableRow>
+
+
+    </TableLayout>
+
+
+    <TableLayout
+        android:id="@+id/tableLayout"
+        android:layout_width="382dp"
+        android:layout_height="227dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TableRow android:background="#FFC107">
+
+            <TextView
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:hint="Premium Course"
+                android:textSize="25dp"></TextView>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="300dp"
+                android:layout_height="75dp"
+                android:hint="Title:-Good to Great                 Author: Jim C.Collins (2001)"
+                android:textColor="@color/black"
+                android:textSize="25dp"></TextView>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="400dp"
+                android:layout_height="15dp"
+                android:hint="-----------------------------------------------------"
+                android:textColor="@color/black"
+                android:textSize="25dp"></TextView>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="400dp"
+                android:layout_height="75dp"
+                android:hint="Title:-The Lean Startup               Author: Eric Ries (2011)"
+                android:textColor="@color/black"
+                android:textSize="25dp"></TextView>
+
+        </TableRow>
+
+
+    </TableLayout>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="56dp"
+        android:text="."
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
