--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/hopefullyfinalbackground"
     tools:context=".ui.gallery.GalleryFragment">
 
 
@@ -18,4 +19,152 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.429"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TableLayout
+        android:layout_width="377dp"
+        android:layout_height="581dp"
+        android:layout_marginBottom="28dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.619"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TableRow android:background="#FFC107">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:hint="Previous Sales"
+                android:textSize="25dp"></TextView>
+
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_width="90dp"
+                android:layout_height="30dp"
+                android:hint="Name:- Sidr  "
+                android:textColor="@color/black"
+                android:textSize="20dp">
+            </TextView>
+
+            <TextView
+                android:layout_width="187dp"
+                android:layout_height="30dp"
+                android:hint="Date:- 10/10/23"
+                android:textColor="@color/black"
+                android:textSize="20dp"></TextView>
+
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:hint="Total Sold:-OMR200.00  "
+                android:textColor="@color/black"
+                android:textSize="20dp"></TextView>
+
+            <TextView
+                android:layout_width="90dp"
+                android:layout_height="30dp"
+                android:hint="View More"
+                android:textColor="@color/purple_500"
+                android:textSize="20dp">
+            </TextView>
+        </TableRow>
+
+
+        <TableRow>
+            <TextView></TextView>
+        </TableRow>
+        <TableRow>
+            <TextView></TextView>
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:layout_width="90dp"
+                android:layout_height="30dp"
+                android:hint="Name:- Semer  "
+                android:textColor="@color/black"
+                android:textSize="20dp">
+            </TextView>
+
+            <TextView
+                android:layout_width="187dp"
+                android:layout_height="30dp"
+                android:hint="Date:- 24/09/23"
+                android:textColor="@color/black"
+                android:textSize="20dp"></TextView>
+
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:hint="Total Sold:-OMR150.00  "
+                android:textColor="@color/black"
+                android:textSize="20dp"></TextView>
+
+            <TextView
+                android:layout_width="90dp"
+                android:layout_height="30dp"
+                android:hint="View More"
+                android:textColor="@color/purple_500"
+                android:textSize="20dp">
+            </TextView>
+        </TableRow>
+
+        <TableRow>
+            <TextView></TextView>
+        </TableRow>
+        <TableRow>
+            <TextView></TextView>
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:layout_width="90dp"
+                android:layout_height="30dp"
+                android:hint="Name:- Manuka  "
+                android:textColor="@color/black"
+                android:textSize="20dp">
+            </TextView>
+
+            <TextView
+                android:layout_width="187dp"
+                android:layout_height="30dp"
+                android:hint="Date:- 01/023"
+                android:textColor="@color/black"
+                android:textSize="20dp"></TextView>
+
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:hint="Total Sold:-OMR200.00  "
+                android:textColor="@color/black"
+                android:textSize="20dp"></TextView>
+
+            <TextView
+                android:layout_width="90dp"
+                android:layout_height="30dp"
+                android:hint="View More"
+                android:textColor="@color/purple_500"
+                android:textSize="20dp">
+            </TextView>
+        </TableRow>
+
+    </TableLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
